<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/titulo_activity_main"
        android:textAlignment="center"
        android:textSize="40sp"
        android:textStyle="italic"
        android:fontFamily="sans-serif-black"
        android:layout_marginTop="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/recuadro_main"/>

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:layout_marginTop="20dp"
        android:theme="@style/Animation.Design.BottomSheetDialog"
        android:spinnerMode="dialog"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button

        android:id="@+id/boton"
        android:layout_width="match_parent"
        android:text="@string/boton_comenzar"
        android:layout_height="wrap_content"
        android:onClick="NuevaPantalla"
        android:backgroundTint="@color/teal_700"/>


    <Button

        android:id="@+id/boton3"
        android:layout_width="match_parent"
        android:text="@string/boton_comenzar_deporte"
        android:layout_height="wrap_content"
        android:onClick="abrirPantallaDeporte"
        android:backgroundTint="@color/teal_700"/>

    <Button
        android:id="@+id/boton2"
        android:layout_width="match_parent"
        android:text="@string/boton_modificar"
        android:layout_height="wrap_content"
        android:onClick="ModificarActividades"
        android:backgroundTint="@color/teal_700"/>

    <Button
        android:id="@+id/update"
        android:layout_width="match_parent"
        android:text="@string/boton_actualizar"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/teal_700"/>

    <Button
        android:id="@+id/tutorial"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="PantallaTutorial"
        android:text="@string/boton_tutorial"
        android:backgroundTint="@color/teal_700"/>


</LinearLayout>